--- a/about.html
+++ b/about.html
@@ -92,7 +92,7 @@
               />
             </div>
             <div class="hero-text">
-              <h1>About Markide</h1>
+              <h1><i class="fas fa-info-circle"></i> About Markide</h1>
               <p class="lead">
                 Bridging the gap between technical SEO and web development to
                 create high-performing digital experiences.
