--- a/contact.html
+++ b/contact.html
@@ -90,8 +90,8 @@
 
       <div class="contact-form">
         <h2>Send a Message</h2>
-        <form id="contact-form" name="submit-to-google-sheet">
-          <form action="/js/contact.js" method="POST">
+        <form id="contact-form">
+          <form action="mailto:markndwiga@gmail.com" method="POST">
             <label for="name"> Name:</label>
             <input type="text" id="name" name="name" required placeholder="What's your name?" />
 
